--- a/frontend/styles/article-search.css
+++ b/frontend/styles/article-search.css
@@ -68,6 +68,15 @@
 
   .search-input-wrapper {
     width: 100%;
+    flex: 1 1 100%;
+  }
+
+  .search-input {
+    font-size: 16px;
+  }
+
+  .search-icon {
+    left: 0.75rem;
   }
 }
 
