--- a/frontend/styles/topic-dropdown.css
+++ b/frontend/styles/topic-dropdown.css
@@ -192,6 +192,11 @@
   width: 100%;
 }
 
+.dropdown-loading .spinner {
+  margin: 0;
+  flex-shrink: 0;
+}
+
 .spinner {
   width: 18px;
   height: 18px;
