--- a/frontend/styles/navbar.css
+++ b/frontend/styles/navbar.css
@@ -5,8 +5,15 @@
 }
 
 header.navbar-container {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   z-index: 1000;
+}
+
+body {
+  padding-top: 70px; 
 }
 
 /* Navbar Content */
