--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -13,6 +13,7 @@ body {
   font-family: "Inter", sans-serif;
   min-height: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* Body transitions for background, color, etc. */
